fixed login, register, and findpassword layout issues

--- a/css/style2.css
+++ b/css/style2.css
@@ -175,13 +175,15 @@ select option {
   transition: all 0.35s ease-in-out;
 }
 .container-login {
-  max-width: 38em;
+  min-width: 38em;
   padding: 1em 3em 2em 3em;
   margin: 0em auto;
   background-color: #fff;
   border-radius: 4.2px;
   box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.2);
-  margin-top:calc(50% - 34em);
+  position: absolute;
+  top:calc(50% - 14em);
+  left: calc(50% - 19em)
 }
 .container{
   max-width: 38em;
@@ -190,7 +192,9 @@ select option {
   background-color: #fff;
   border-radius: 4.2px;
   box-shadow: 0px 3px 10px -2px rgba(0, 0, 0, 0.2);
-  margin-top: -1em;
+  position: absolute;
+  left: calc(50% - 19em);
+  top:2em;
 }
 .row {
   zoom: 1;
